delete heading cause interfuser already process heading

--- a/config/pdm_local.yaml
+++ b/config/pdm_local.yaml
@@ -57,6 +57,7 @@ enable_action_normalization: true
 bev_encoder:
   pretrained_path: /home/wang/Project/MoT-DP/checkpoints/interfuser/lidar_bev_encoder_only.pth
   state_dim: 12
+  status_dim_anchor_goal: 14
   feature_dim: 256
   use_group_norm: true
   freeze_backbone: false
@@ -106,12 +107,12 @@ training:
   validation_freq: 5
   save_freq: 5
   early_stopping_patience: 10
-  checkpoint_dir: /home/wang/Project/MoT-DP/checkpoints/carla_dit_best
+  checkpoint_dir: /home/wang/Project/MoT-DP/checkpoints/goal_oriented/
 logging:
   use_wandb: true
   wandb_project: carla-diffusion-policy
   run_name: carla_dit_optimized
-  checkpoint_dir: /home/wang/Project/MoT-DP/checkpoints/carla_dit_best
+  checkpoint_dir: /home/wang/Project/MoT-DP/checkpoints/goal_oriented/
   save_every: 5
   log_freq: 10
   wandb_entity: wangzhidong2000-nanyang-technological-university-singapore
